# eth-btc-wrapper

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
examples/: build_btc_tx.c  build_eth_tx.c  cipher  cipher.c  eth_tx  tx
src/: btc.rs  cipher.rs  ecdsa.rs  eth.rs  lib.rs
