[package]
name = "eth-btc-wrapper"
version = "0.1.0"
authors = ["jayphbee <jayphbee@163.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

name = "ethbtcwrapper"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]

bitcoin = "0.18.0"
bitcoin_hashes = "0.3.2"
ethereum-tx-sign = { git = "https://github.com/GaiaWorld/ethereum-tx-sign", branch = "master" }
ethabi = "8.0.0"
ethereum-types = "0.4"
hex = "0.3.2"
primitive-types = "0.3.0"
#secp256k1 = { version = "0.14", features = ["recovery"] }
#rust-crypto = "0.2.36"
tiny-hderive = "0.2.1"
tiny-bip39 = "0.6.2"
ethsign = "0.6.1"

[build-dependencies]

cbindgen = "0.9.0"

[profile.release]

opt-level = 3
panic = "abort"
